@@ -120,6 +120,7 @@
 #define PREMAKE_LOG		"pmk.log"
 
 #define PREMAKE_CONFIG_PATH	CONFDIR "/" PREMAKE_CONFIG 
+#define PREMAKE_CONFIG_PATH_BAK	PREMAKE_CONFIG_PATH ".bak"
 
 #define PREMAKE_TMP_DIR		TMPDIR
 
